ADD_EXECUTABLE(server
    server.cpp
)


TARGET_INCLUDE_DIRECTORIES(server BEFORE PRIVATE ${HTTPLIB_INCLUDE_DIRECTORIES})
TARGET_INCLUDE_DIRECTORIES(server SYSTEM PRIVATE ${HTTPLIB_SYSTEM_INCLUDE_DIRECTORIES})
TARGET_LINK_LIBRARIES(server ${HTTPLIB_LINK_LIBRARIES} httplib)
TARGET_COMPILE_OPTIONS(server PRIVATE ${HTTPLIB_CXX_OPTIONS})
TARGET_COMPILE_DEFINITIONS(server PRIVATE ${HTTPLIB_DEFINITIONS})
