ADD_EXECUTABLE(server
    server.cpp
)

TARGET_INCLUDE_DIRECTORIES(server BEFORE PRIVATE ${HTTPLIB_INCLUDE_DIRECTORIES})
TARGET_INCLUDE_DIRECTORIES(server SYSTEM PRIVATE ${HTTPLIB_SYSTEM_INCLUDE_DIRECTORIES})
TARGET_LINK_LIBRARIES(server ${OPENSSL_LIBRARIES} ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} httplib)
TARGET_COMPILE_OPTIONS(server PRIVATE ${HTTPLIB_CXX_OPTIONS})
TARGET_COMPILE_DEFINITIONS(server PRIVATE ${HTTPLIB_DEFINITIONS})
